; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_ixp4xx_hss.c_dma_unmap_tx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_ixp4xx_hss.c_dma_unmap_tx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.port = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.desc = type { i32, i64 }

@DMA_TO_DEVICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.port*, %struct.desc*)* @dma_unmap_tx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dma_unmap_tx(%struct.port* %0, %struct.desc* %1) #0 {
  %3 = alloca %struct.port*, align 8
  %4 = alloca %struct.desc*, align 8
  store %struct.port* %0, %struct.port** %3, align 8
  store %struct.desc* %1, %struct.desc** %4, align 8
  %5 = load %struct.port*, %struct.port** %3, align 8
  %6 = getelementptr inbounds %struct.port, %struct.port* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.desc*, %struct.desc** %4, align 8
  %10 = getelementptr inbounds %struct.desc, %struct.desc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = and i32 %11, -4
  %13 = load %struct.desc*, %struct.desc** %4, align 8
  %14 = getelementptr inbounds %struct.desc, %struct.desc* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = and i32 %15, 3
  %17 = sext i32 %16 to i64
  %18 = load %struct.desc*, %struct.desc** %4, align 8
  %19 = getelementptr inbounds %struct.desc, %struct.desc* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = add nsw i64 %17, %20
  %22 = call i64 @ALIGN(i64 %21, i32 4)
  %23 = load i32, i32* @DMA_TO_DEVICE, align 4
  %24 = call i32 @dma_unmap_single(i32* %8, i32 %12, i64 %22, i32 %23)
  ret void
}

declare dso_local i32 @dma_unmap_single(i32*, i32, i64, i32) #1

declare dso_local i64 @ALIGN(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
